// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContributorsBuilder renders builder with sidebar: initialRenderEditing 1`] = `
<DocumentFragment>
  <div
    class="contributor-builder-root editing"
  >
    <div
      class="criteria-builder-section-sidebar"
    >
      <div
        class="criteria-sidebar-root"
      >
        <div
          class="sidebar-header"
        >
          properties
        </div>
        <div
          class="sidebar-search"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-item"
            >
              <input
                class="form-control input-group-inset input-group-inset-after"
                data-testid="search-input"
                placeholder="search"
                type="text"
                value=""
              />
              <div
                class="input-group-inset-item input-group-inset-item-after"
              >
                <button
                  class="btn btn-unstyled"
                  data-testid="search-button"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-search"
                    role="presentation"
                  >
                    <use
                      xlink:href="#search"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sidebar-collapse"
        >
          <ul
            class="list-unstyled sidebar-collapse-groups"
          >
            <li
              class="sidebar-collapse-user"
            >
              <div
                class="sidebar-collapse-header-root"
              >
                <a
                  class="d-flex justify-content-between sidebar-collapse-header"
                >
                  User
                  <span
                    class="collapse-icon"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-angle-right active"
                      role="presentation"
                    >
                      <use
                        xlink:href="#angle-right"
                      />
                    </svg>
                  </span>
                </a>
              </div>
              <ul
                class="properties-list active"
              >
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Ancestor Organization IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Class PK
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Company ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-date"
                        role="presentation"
                      >
                        <use
                          xlink:href="#date"
                        />
                      </svg>
                    </span>
                  </span>
                  Date Modified
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Email Address
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  First Name
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Group ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Group IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Job Title
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Last Name
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Organization IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Role IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Scope Group ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Screen Name
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Team IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  User Group IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  User ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  User Name
                </li>
              </ul>
            </li>
            <li
              class="sidebar-collapse-user-organization"
            >
              <div
                class="sidebar-collapse-header-root"
              >
                <a
                  class="d-flex justify-content-between sidebar-collapse-header"
                >
                  User Organization
                  <span
                    class="collapse-icon"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-angle-right"
                      role="presentation"
                    >
                      <use
                        xlink:href="#angle-right"
                      />
                    </svg>
                  </span>
                </a>
              </div>
              <ul
                class="properties-list"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="criteria-builder-section-main"
    >
      <div
        class="contributor-container"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <div
            class="content-wrapper"
          >
            <div
              class="sheet"
            >
              <div
                class="d-flex flex-wrap justify-content-between mb-4"
              >
                <h2
                  class="mb-2 sheet-title"
                >
                  conditions
                </h2>
                <div
                  class="criterion-string"
                >
                  <div
                    class="btn-group"
                  >
                    <div
                      class="btn-group-item inline-item"
                    >
                      <span
                        class="mr-4"
                      >
                        conditions-match
                        <b
                          class="ml-2 text-dark"
                        >
                          x-members
                        </b>
                      </span>
                      <button
                        class="btn btn-sm btn-secondary"
                        type="button"
                      >
                        view-members
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContributorsBuilder renders builder without sidebar: initialRenderNotEditing 1`] = `
<DocumentFragment>
  <div
    class="contributor-builder-root"
  >
    <div
      class="criteria-builder-section-sidebar"
    >
      <div
        class="criteria-sidebar-root"
      >
        <div
          class="sidebar-header"
        >
          properties
        </div>
        <div
          class="sidebar-search"
        >
          <div
            class="input-group"
          >
            <div
              class="input-group-item"
            >
              <input
                class="form-control input-group-inset input-group-inset-after"
                data-testid="search-input"
                placeholder="search"
                type="text"
                value=""
              />
              <div
                class="input-group-inset-item input-group-inset-item-after"
              >
                <button
                  class="btn btn-unstyled"
                  data-testid="search-button"
                  type="button"
                >
                  <svg
                    class="lexicon-icon lexicon-icon-search"
                    role="presentation"
                  >
                    <use
                      xlink:href="#search"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="sidebar-collapse"
        >
          <ul
            class="list-unstyled sidebar-collapse-groups"
          >
            <li
              class="sidebar-collapse-user"
            >
              <div
                class="sidebar-collapse-header-root"
              >
                <a
                  class="d-flex justify-content-between sidebar-collapse-header"
                >
                  User
                  <span
                    class="collapse-icon"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-angle-right active"
                      role="presentation"
                    >
                      <use
                        xlink:href="#angle-right"
                      />
                    </svg>
                  </span>
                </a>
              </div>
              <ul
                class="properties-list active"
              >
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Ancestor Organization IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Class PK
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Company ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-date"
                        role="presentation"
                      >
                        <use
                          xlink:href="#date"
                        />
                      </svg>
                    </span>
                  </span>
                  Date Modified
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Email Address
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  First Name
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Group ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Group IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Job Title
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Last Name
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Organization IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Role IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Scope Group ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Screen Name
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  Team IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  User Group IDs
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  User ID
                </li>
                <li
                  class="criteria-sidebar-item-root color--user"
                  draggable="true"
                >
                  <span
                    class="inline-item"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-drag"
                      role="presentation"
                    >
                      <use
                        xlink:href="#drag"
                      />
                    </svg>
                  </span>
                  <span
                    class="criteria-sidebar-item-type sticker sticker-light"
                  >
                    <span
                      class="inline-item"
                    >
                      <svg
                        class="lexicon-icon lexicon-icon-text"
                        role="presentation"
                      >
                        <use
                          xlink:href="#text"
                        />
                      </svg>
                    </span>
                  </span>
                  User Name
                </li>
              </ul>
            </li>
            <li
              class="sidebar-collapse-user-organization"
            >
              <div
                class="sidebar-collapse-header-root"
              >
                <a
                  class="d-flex justify-content-between sidebar-collapse-header"
                >
                  User Organization
                  <span
                    class="collapse-icon"
                  >
                    <svg
                      class="lexicon-icon lexicon-icon-angle-right"
                      role="presentation"
                    >
                      <use
                        xlink:href="#angle-right"
                      />
                    </svg>
                  </span>
                </a>
              </div>
              <ul
                class="properties-list"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="criteria-builder-section-main"
    >
      <div
        class="contributor-container"
      >
        <div
          class="container-fluid container-fluid-max-xl"
        >
          <div
            class="content-wrapper"
          >
            <div
              class="sheet"
            >
              <div
                class="d-flex flex-wrap justify-content-between mb-4"
              >
                <h2
                  class="mb-2 sheet-title"
                >
                  conditions
                </h2>
                <div
                  class="criterion-string"
                >
                  <div
                    class="btn-group"
                  >
                    <div
                      class="btn-group-item inline-item"
                    >
                      <span
                        class="mr-4"
                      >
                        conditions-match
                        <b
                          class="ml-2 text-dark"
                        >
                          x-members
                        </b>
                      </span>
                      <button
                        class="btn btn-sm btn-secondary"
                        type="button"
                      >
                        view-members
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
